--- a/hof/kurogan-statblock.html
+++ b/hof/kurogan-statblock.html
@@ -373,7 +373,7 @@
 			</script>
 		</templates>
 <!--	<stat-block id="ONE COLUMN"> -->
-		<stat-block data-content-height="625" data-three-column="" id="THREE COLUMNS">
+		<stat-block data-content-height="800" data-two-column="" id="TWO COLUMNS">
 			<creature-heading>
 				<h1>Kurogan, the Great and Powerful</h1>
 				<h2>Medium dragonborn (gold), neutral good</h2>
