--- a/hof/kurogan-statblock.html
+++ b/hof/kurogan-statblock.html
@@ -487,13 +487,12 @@
 			</property-block>
 			<property-block>
 				<h4>1st Level (4 slots).</h4>
-				<p><i>Chromatic Orb</i></p>
-				<p><i>Protection from Evil and Good</i></p>
-				<p><i>Shield</i></p>
-				<p><i>Thunderwave</i></p>
+				<br>
+				<p><i>Chromatic Orb, Protection from Evil and Good, Shield, Thunderwave</i></p>
 			</property-block>
 			<property-block>
 				<h4>2nd Level (2 slots).</h4>
+				<br>
 				<p><i>Shatter</i></p>
 			</property-block>
 		</stat-block>
