--- a/hof/kurogan-statblock.html
+++ b/hof/kurogan-statblock.html
@@ -373,7 +373,7 @@
 			</script>
 		</templates>
 <!--	<stat-block id="ONE COLUMN"> -->
-		<stat-block data-content-height="800" data-two-column="" id="TWO COLUMNS">
+		<stat-block data-content-height="825" data-two-column="" id="TWO COLUMNS">
 			<creature-heading>
 				<h1>Kurogan, the Great and Powerful</h1>
 				<h2>Medium dragonborn (gold), neutral good</h2>
@@ -482,8 +482,8 @@
 			<h3>Spells</h3>
 			<property-block>
 				<h4>Cantrips.</h4>
-				<p><i>Fire Bolt</i></p>
-				<p><i>Poison Spray</i></p>
+				<br>
+				<p><i>Fire Bolt, Poison Spray</i></p>
 			</property-block>
 			<property-block>
 				<h4>1st Level (4 slots).</h4>
