--- a/hof/kurogan-statblock.html
+++ b/hof/kurogan-statblock.html
@@ -435,11 +435,8 @@
 			</property-block>
 			<h3>Actions</h3>
 			<property-block>
-				<h4>Extra Attack.</h4>
+				<h4>Extra Attack (Variant Spellknight).</h4>
 				<p>When Kurogan takes the Attack action on his turn, he may make two attacks instead of one.</p>
-			</property-block>
-			<property-block>
-				<h4>Spellknight.</h4>
 				<p>When Kurogan takes the Cast a Spell action on his turn and casts a cantrip, he may make a weapon attack as a bonus action.</p>
 			</property-block>
 			<property-block>
