--- a/hof/kurogan-statblock.html
+++ b/hof/kurogan-statblock.html
@@ -436,8 +436,7 @@
 			<h3>Actions</h3>
 			<property-block>
 				<h4>Extra Attack (Variant Spellknight).</h4>
-				<p>When Kurogan takes the Attack action on his turn, he may make two attacks instead of one.</p>
-				<p>When Kurogan takes the Cast a Spell action on his turn and casts a cantrip, he may make a weapon attack as a bonus action.</p>
+				<p>When Kurogan takes the Attack action on his turn, he may make two attacks instead of one. Alternatively, when Kurogan takes the Cast a Spell action on his turn and casts a cantrip, he may make a weapon attack as a bonus action.</p>
 			</property-block>
 			<property-block>
 				<h4>Dragonblade Greatsword.</h4>
