--- a/hof/kurogan-statblock.html
+++ b/hof/kurogan-statblock.html
@@ -475,7 +475,7 @@
 				<h4>Protection.</h4>
 				<p>When an ally within 5 feet of Kurogan is targeted by an attack, Kurogan interposes his shield, imposing disadvantage on the attack roll.</p>
 			</property-block>
-			<h3>Spells</h3>
+			<h3>Spellcasting</h3>
 			<property-block>
 				<h4>Cantrips.</h4>
 				<br>
