--- a/fanart.html
+++ b/fanart.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-<div id="flickrembed"></div><script src='https://flickrembed.com/embed_v2.js.php?source=flickr&layout=responsive&input=www.flickr.com/photos/140250708@N07/&sort=2&by=user&theme=tiles_nested&scale=fit&limit=500&skin=default&autoplay=true'></script>
-
+<script src='https://flickrembed.com/embed_v2.js.php?source=flickr&layout=responsive&input=www.flickr.com/photos/140250708@N07/&sort=2&by=user&theme=tiles_nested&scale=fit&limit=500&skin=default&autoplay=true'></script>
+  
+<div id="flickrembed"></div>
+  
 </html>
