--- a/playerinfo.html
+++ b/playerinfo.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-<script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
-
-<!-- Place this tag where you want the Awesome Table Widget to render -->
-<div data-type="AwesomeTableView" data-viewID="-LABb2BSYUOf7RzR1PUW"></div>
+<iframe data-type="AwesomeTableView" name="152408218849233" src="https://view-awesome-table.com/-LABb2BSYUOf7RzR1PUW/view" scrolling="no" style="height:813px;"></iframe>
 
 </html>
