--- a/index.html
+++ b/index.html
@@ -15,18 +15,35 @@
 		<!-- Navbar -->
 		<div class="w3-top">
 			<div class="w3-bar w3-black w3-card">
-				<a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#about" onclick="setTimeout(loadContent, 200);">About the Show</a> <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#playing" onclick="setTimeout(loadContent, 200);">Playing in DnDTime</a> <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#fanart" onclick="setTimeout(loadContent, 200);">Fan Art</a> <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#heroes" onclick="setTimeout(loadContent, 200);">The Heroes of DnDTime</a> <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#items" onclick="setTimeout(loadContent, 200);">The Magic of DnDTime</a> <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#players" onclick="setTimeout(loadContent, 200);">The Players of DnDTime</a><a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#faq" onclick="setTimeout(loadContent, 200);">Frequently Asked Questions</a>
+					<a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+					<a class="w3-bar-item w3-button w3-padding-large" href="#welcome" onclick="setTimeout(loadContent, 200);">Welcome</a>
+					<a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#signups" onclick="setTimeout(loadContent, 200);">Sign Up To Play</a>
+					<a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#shop" onclick="setTimeout(loadContent, 200);">Bartholomew's Shop</a>
 				<div class="w3-dropdown-hover w3-hide-small">
 					<button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>
 					<div class="w3-dropdown-content w3-bar-block w3-card-4">
-						<a class="w3-bar-item w3-button w3-padding-large" href="#welcome" onclick="setTimeout(loadContent, 200);">Welcome</a> <a class="w3-bar-item w3-button w3-padding-large" href="#signups" onclick="setTimeout(loadContent, 200);">Sign Up To Play</a> <a class="w3-bar-item w3-button w3-padding-large" href="#shop" onclick="setTimeout(loadContent, 200);">Bartholomew's Shop</a> <a class="w3-bar-item w3-button w3-padding-large" href="#about" onclick="setTimeout(loadContent, 200);">About the Show</a> <a class="w3-bar-item w3-button w3-padding-large" href="#playing" onclick="setTimeout(loadContent, 200);">Playing in DnDTime</a> <a class="w3-bar-item w3-button w3-padding-large" href="#fanart" onclick="setTimeout(loadContent, 200);">Fan Art</a> <a class="w3-bar-item w3-button w3-padding-large" href="#heroes" onclick="setTimeout(loadContent, 200);">The Heroes of DnDTime</a> <a class="w3-bar-item w3-button w3-padding-large" href="#items" onclick="setTimeout(loadContent, 200);">The Magic of DnDTime</a> <a class="w3-bar-item w3-button w3-padding-large" href="#players" onclick="setTimeout(loadContent, 200);">The Players of DnDTime</a><a class="w3-bar-item w3-button w3-padding-large" href="#faq" onclick="setTimeout(loadContent, 200);">Frequently Asked Questions</a>
+						<a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#about" onclick="setTimeout(loadContent, 200);">About the Show</a>
+						<a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#playing" onclick="setTimeout(loadContent, 200);">Playing in DnDTime</a>
+						<a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#fanart" onclick="setTimeout(loadContent, 200);">Fan Art</a>
+						<a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#heroes" onclick="setTimeout(loadContent, 200);">The Heroes of DnDTime</a>
+						<a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#items" onclick="setTimeout(loadContent, 200);">The Magic of DnDTime</a>
+						<a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#players" onclick="setTimeout(loadContent, 200);">The Players of DnDTime</a>
+						<a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#faq" onclick="setTimeout(loadContent, 200);">Frequently Asked Questions</a>
 					</div>
 				</div>
 			</div>
 		</div><!-- Navbar on small screens -->
 		<div class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" id="navDemo" style="margin-top:46px">
-			<a class="w3-bar-item w3-button w3-padding-large" href="#welcome" onclick="setTimeout(loadContent, 200);">Welcome</a> <a class="w3-bar-item w3-button w3-padding-large" href="#signups" onclick="setTimeout(loadContent, 200);">Sign Up To Play</a> <a class="w3-bar-item w3-button w3-padding-large" href="#shop" onclick="setTimeout(loadContent, 200);">Bartholomew's Shop</a> <a class="w3-bar-item w3-button w3-padding-large" href="#about" onclick="setTimeout(loadContent, 200);">About the Stream</a> <a class="w3-bar-item w3-button w3-padding-large" href="#playing" onclick="setTimeout(loadContent, 200);">Playing in DnDTime</a> <a class="w3-bar-item w3-button w3-padding-large" href="#fanart" onclick="setTimeout(loadContent, 200);">Fan Art</a> <a class="w3-bar-item w3-button w3-padding-large" href="#roster" onclick="setTimeout(loadContent, 200);">Hero Roster</a> <a class="w3-bar-item w3-button w3-padding-large" href="#items" onclick="setTimeout(loadContent, 200);">Bartholomew's Guide to all Things Arcane</a> <a class="w3-bar-item w3-button w3-padding-large" href="#faq" onclick="setTimeout(loadContent, 200);">Frequently Asked Questions</a>
-		</div><!-- Title Area & Audio Player -->
+			<a class="w3-bar-item w3-button w3-padding-large" href="#welcome" onclick="setTimeout(loadContent, 200);">Welcome</a>
+			<a class="w3-bar-item w3-button w3-padding-large" href="#signups" onclick="setTimeout(loadContent, 200);">Sign Up To Play</a>
+			<a class="w3-bar-item w3-button w3-padding-large" href="#shop" onclick="setTimeout(loadContent, 200);">Bartholomew's Shop</a>
+			<a class="w3-bar-item w3-button w3-padding-large" href="#about" onclick="setTimeout(loadContent, 200);">About the Stream</a>
+			<a class="w3-bar-item w3-button w3-padding-large" href="#playing" onclick="setTimeout(loadContent, 200);">Playing in DnDTime</a>
+			<a class="w3-bar-item w3-button w3-padding-large" href="#fanart" onclick="setTimeout(loadContent, 200);">Fan Art</a>
+			<a class="w3-bar-item w3-button w3-padding-large" href="#heroes" onclick="setTimeout(loadContent, 200);">The Heroes of DnDTime</a>
+			<a class="w3-bar-item w3-button w3-padding-large" href="#items" onclick="setTimeout(loadContent, 200);">The Magic of DnDTime</a>
+			<a class="w3-bar-item w3-button w3-padding-large" href="#players" onclick="setTimeout(loadContent, 200);">The Players of DnDTime</a>
+			<a class="w3-bar-item w3-button w3-padding-large" href="#faq" onclick="setTimeout(loadContent, 200);">Frequently Asked Questions</a>		</div><!-- Title Area & Audio Player -->
 		<div class="TitleFont" style="line-height: 90%; margin-top: 75px;">
 			PETE AND JEREMY'S DNDTIME
 		</div><br>
