--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 					</div>
 				</div>
 			</div>
-		</div><!-- Navbar on small screens -->
+		</div>
+		<!-- Navbar on small screens -->
 		<div class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" id="navDemo" style="margin-top:46px">
 			<a class="w3-bar-item w3-button w3-padding-large" href="#welcome" onclick="setTimeout(loadContent, 200);">Welcome</a>
 			<a class="w3-bar-item w3-button w3-padding-large" href="#signups" onclick="setTimeout(loadContent, 200);">Sign Up To Play</a>
@@ -43,7 +44,9 @@
 			<a class="w3-bar-item w3-button w3-padding-large" href="#heroes" onclick="setTimeout(loadContent, 200);">The Heroes of DnDTime</a>
 			<a class="w3-bar-item w3-button w3-padding-large" href="#items" onclick="setTimeout(loadContent, 200);">The Magic of DnDTime</a>
 			<a class="w3-bar-item w3-button w3-padding-large" href="#players" onclick="setTimeout(loadContent, 200);">The Players of DnDTime</a>
-			<a class="w3-bar-item w3-button w3-padding-large" href="#faq" onclick="setTimeout(loadContent, 200);">Frequently Asked Questions</a>		</div><!-- Title Area & Audio Player -->
+			<a class="w3-bar-item w3-button w3-padding-large" href="#faq" onclick="setTimeout(loadContent, 200);">Frequently Asked Questions</a>
+		</div>
+		<!-- Title Area & Audio Player -->
 		<div class="TitleFont" style="line-height: 90%; margin-top: 75px;">
 			PETE AND JEREMY'S DNDTIME
 		</div><br>
