--- a/misc/quickref/index.html
+++ b/misc/quickref/index.html
@@ -6,7 +6,7 @@
     <title>D&D 5e quick reference</title>
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="css/quickref.css">
-    <link rel="stylesheet" type="text/css" href="css/icons.css">
+    <!--<link rel="stylesheet" type="text/css" href="css/icons.css">-->
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
