--- a/shop/choice/crystalcollar.html
+++ b/shop/choice/crystalcollar.html
@@ -4,7 +4,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:700" rel="stylesheet" type="text/css"/>
 		<link href="http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic" rel="stylesheet" type="text/css"/>
 		<meta charset="utf-8"/>
-		<title>Secundus, the Rogue Modron</title>
+		<title>The Crystal Collar</title>
 	</head>
 	<body>
 		<templates>
@@ -374,9 +374,10 @@
 		</templates>
 		<stat-block id="ONE COLUMN">
 <!--		<stat-block data-content-height="625" data-two-column="" id="TWO COLUMNS"> -->
+			<h3></h3>
 			<creature-heading>
 				<h1>The Crystal Collar</h1>
-				<h2>Wondrous Item, Legendary (Requires Attunement by a Warlock)</h2>
+				<h2><strong>Wondrous Item, Legendary (Requires Attunement by a Warlock)</strong></h2>
 			</creature-heading>
 			<property-block>
 				<p>This set of crystal bracelets are made from shards of Levistus’ own unmelting tomb. The bracelets have been engraved such that, as they refract light, they cast images of a young drow woman standing over kings, queens, and civilizations, heralding an era that may soon come to pass. When placed around the neck of a familiar, the bracelet magically resizes to a snug collar. While you wear the paired bracelet, an ethereal leash that only you can see heightens your connection with your familiar and grants you the following benefits:</p>
