--- a/shop/choice/crystalcollar.html
+++ b/shop/choice/crystalcollar.html
@@ -376,7 +376,7 @@
 <!--		<stat-block data-content-height="625" data-two-column="" id="TWO COLUMNS"> -->
 			<creature-heading>
 				<h1>The Crystal Collar</h1>
-				<h2><strong>Wondrous Item, Legendary (Requires Attunement by a Warlock)</strong></h2>
+				<h2>Wondrous Item, Legendary (Requires Attunement by a Warlock)</h2>
 			</creature-heading>
 			<h3></h3>
 			<property-block>
