--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="/Graphics/favicon.png" rel="icon" type="image/png">
 	<link href="dndtime.css" rel="stylesheet">
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<link href="/nanogallery2/dist/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="/nanogallery2/dist/jquery.nanogallery2.min.js"></script>
 </head>
 <body onload="loadContent()">
 	<span id="welcome"></span><span id="about"></span><span id="fanart"></span><span id="faq"></span><span id="items"></span><span id="playing"></span><span id="signups"></span><span id="roster"></span><span id="shop"></span>
