--- a/fanart.html
+++ b/fanart.html
@@ -26,7 +26,7 @@
         "thumbnailLabel": {
           "titleMultiLine": true
         },
-        "thumbnailHoverEffect2": "imageScaleIn80|imageSepiaOff|labelAppear75",
+        "thumbnailHoverEffect2": "imageSepiaOff|labelAppear75",
         "thumbnailAlignment": "center"
       }'>
     
