--- a/stream/adventuredata.html
+++ b/stream/adventuredata.html
@@ -1,103 +1,135 @@
 <!DOCTYPE html>
+
 <html>
 <head>
+
 	<style>
-			@font-face {
-			font-family: "NodestoCaps";
-			src: url("/Fonts/Nodesto%20Caps%20Condensed%20Bold.woff2") format("woff2"), url("/Fonts/Nodesto%20Caps%20Condensed%20Bold.woff") format("woff");
-			}
-			@font-face {
-			font-family: "ScalySansCapsBold";
-			src: url("/Fonts/Scaly%20Sans%20Caps%20Bold.woff2") format("woff2"), url("/Fonts/Scaly%20Sans%20Caps%20Bold.woff") format("woff");
-			}
-			.AdvName
-            {
-                font-family:    NodestoCaps;
-                font-size:      42px;
-                font-weight:    bold;
-				text-transform: uppercase;
-				color: black;
-            }
-			.AdvDesc
-            {
-                font-family:    ScalySansCapsBold;
-                font-size:      18px;
-                font-weight:    bold;
-				text-transform: uppercase;
-				color: black;
-            }
-			.CharName
-            {
-                font-family:    NodestoCaps;
-                font-size:      36px;
-                font-weight:    bold;
-				text-transform: uppercase;
-				color: black;
-            }
-			.CharTitle
-            {
-                font-family:    NodestoCaps
-                font-size:      18px;
-                font-weight:    bold;
-				text-transform: uppercase;
-				margin-top: -7px;
-				color: black;
-            }
+	           @font-face {
+	           font-family: "NodestoCaps";
+	           src: url("/Fonts/Nodesto%20Caps%20Condensed%20Bold.woff2") format("woff2"), url("/Fonts/Nodesto%20Caps%20Condensed%20Bold.woff") format("woff");
+	           }
+	           @font-face {
+	           font-family: "ScalySansCapsBold";
+	           src: url("/Fonts/Scaly%20Sans%20Caps%20Bold.woff2") format("woff2"), url("/Fonts/Scaly%20Sans%20Caps%20Bold.woff") format("woff");
+	           }
+	           .AdvName
+	           {
+	               font-family:    NodestoCaps;
+	               font-size:      42px;
+	               font-weight:    bold;
+	               text-transform: uppercase;
+	               color: black;
+	           }
+	           .AdvDesc
+	           {
+	               font-family:    ScalySansCapsBold;
+	               font-size:      18px;
+	               font-weight:    bold;
+	               text-transform: uppercase;
+	               color: black;
+	           }
+	           .CharName
+	           {
+	               font-family:    NodestoCaps;
+	               font-size:      36px;
+	               font-weight:    bold;
+	               text-transform: uppercase;
+	               color: black;
+	           }
+	           .CharTitle
+	           {
+	               font-family:    NodestoCaps
+	               font-size:      18px;
+	               font-weight:    bold;
+	               text-transform: uppercase;
+	               margin-top: -7px;
+	               color: black;
+	           }
 	</style>
+
+	<title>
+	</title>
 </head>
+
 <body>
-<div class="CharName" id="CharacterName01"></div>
-<div class="CharTitle" id="CharacterTitle01"></div>
-<div class="CharName" id="CharacterName02"></div>
-<div class="CharTitle" id="CharacterTitle02"></div>
-<div class="CharName" id="CharacterName03"></div>
-<div class="CharTitle" id="CharacterTitle03"></div>
-<div class="CharName" id="CharacterName04"></div>
-<div class="CharTitle" id="CharacterTitle04"></div>
-<div class="AdvName" id="AdventureTitle"></div>
-<div class="AdvDesc" id="AdventureDescription"></div>
+	<div class="CharName" id="CharacterName01">
+	</div>
 
-<script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
-<script type="text/javascript">
-  gapi.load('auth2', function() {
-    // Library loaded.
-  });
-</script>
 
-<script>
-var xhttp = new XMLHttpRequest();
-xhttp.onreadystatechange = function() {
-    if (this.readyState == 4 && this.status == 200) {
-        parseFeed(this);
-    }
-};
-xhttp.open("GET", "https://spreadsheets.google.com/feeds/list/1RbvEAtAvqr79s5FQx0X0f4t9LYxzf0cIy8_w6sOi6MQ/2/public/full/cokwr");
-xhttp.send();
+	<div class="CharTitle" id="CharacterTitle01">
+	</div>
 
-function parseFeed(xml) {
-    var xmlDoc = xml.responseXML;
-    document.getElementById("AdventureTitle").innerHTML =
-    xmlDoc.getElementsByTagName("gsx:c01")[0].childNodes[0].nodeValue;
-    document.getElementById("AdventureDescription").innerHTML =
-    xmlDoc.getElementsByTagName("gsx:c02")[0].childNodes[0].nodeValue;
-    document.getElementById("CharacterName01").innerHTML =
-    xmlDoc.getElementsByTagName("gsx:c03")[0].childNodes[0].nodeValue;
-    document.getElementById("CharacterTitle01").innerHTML =
-    xmlDoc.getElementsByTagName("gsx:c04")[0].childNodes[0].nodeValue;
-    document.getElementById("CharacterName02").innerHTML =
-    xmlDoc.getElementsByTagName("gsx:c05")[0].childNodes[0].nodeValue;
-    document.getElementById("CharacterTitle02").innerHTML =
-    xmlDoc.getElementsByTagName("gsx:c06")[0].childNodes[0].nodeValue;
-    document.getElementById("CharacterName03").innerHTML =
-    xmlDoc.getElementsByTagName("gsx:c07")[0].childNodes[0].nodeValue;
-    document.getElementById("CharacterTitle03").innerHTML =
-    xmlDoc.getElementsByTagName("gsx:c08")[0].childNodes[0].nodeValue;
-    document.getElementById("CharacterName04").innerHTML =
-    xmlDoc.getElementsByTagName("gsx:c09")[0].childNodes[0].nodeValue;
-    document.getElementById("CharacterTitle04").innerHTML =
-    xmlDoc.getElementsByTagName("gsx:c10")[0].childNodes[0].nodeValue;
-}
-</script>
 
+	<div class="CharName" id="CharacterName02">
+	</div>
+
+
+	<div class="CharTitle" id="CharacterTitle02">
+	</div>
+
+
+	<div class="CharName" id="CharacterName03">
+	</div>
+
+
+	<div class="CharTitle" id="CharacterTitle03">
+	</div>
+
+
+	<div class="CharName" id="CharacterName04">
+	</div>
+
+
+	<div class="CharTitle" id="CharacterTitle04">
+	</div>
+
+
+	<div class="AdvName" id="AdventureTitle">
+	</div>
+
+
+	<div class="AdvDesc" id="AdventureDescription">
+	</div>
+	<script src="https://apis.google.com/js/api.js" type="text/javascript">
+	</script> 
+	<script type="text/javascript">
+	 gapi.load('auth2', function() {
+	   // Library loaded.
+	 });
+	</script> 
+	<script>
+	var xhttp = new XMLHttpRequest();
+	xhttp.onreadystatechange = function() {
+	   if (this.readyState == 4 && this.status == 200) {
+	       parseFeed(this);
+	   }
+	};
+	xhttp.open("GET", "https://spreadsheets.google.com/feeds/list/1RbvEAtAvqr79s5FQx0X0f4t9LYxzf0cIy8_w6sOi6MQ/2/public/full/cokwr");
+	xhttp.send();
+
+	function parseFeed(xml) {
+	   var xmlDoc = xml.responseXML;
+	   document.getElementById("AdventureTitle").innerHTML =
+	   xmlDoc.getElementsByTagName("gsx:c01")[0].childNodes[0].nodeValue;
+	   document.getElementById("AdventureDescription").innerHTML =
+	   xmlDoc.getElementsByTagName("gsx:c02")[0].childNodes[0].nodeValue;
+	   document.getElementById("CharacterName01").innerHTML =
+	   xmlDoc.getElementsByTagName("gsx:c03")[0].childNodes[0].nodeValue;
+	   document.getElementById("CharacterTitle01").innerHTML =
+	   xmlDoc.getElementsByTagName("gsx:c04")[0].childNodes[0].nodeValue;
+	   document.getElementById("CharacterName02").innerHTML =
+	   xmlDoc.getElementsByTagName("gsx:c05")[0].childNodes[0].nodeValue;
+	   document.getElementById("CharacterTitle02").innerHTML =
+	   xmlDoc.getElementsByTagName("gsx:c06")[0].childNodes[0].nodeValue;
+	   document.getElementById("CharacterName03").innerHTML =
+	   xmlDoc.getElementsByTagName("gsx:c07")[0].childNodes[0].nodeValue;
+	   document.getElementById("CharacterTitle03").innerHTML =
+	   xmlDoc.getElementsByTagName("gsx:c08")[0].childNodes[0].nodeValue;
+	   document.getElementById("CharacterName04").innerHTML =
+	   xmlDoc.getElementsByTagName("gsx:c09")[0].childNodes[0].nodeValue;
+	   document.getElementById("CharacterTitle04").innerHTML =
+	   xmlDoc.getElementsByTagName("gsx:c10")[0].childNodes[0].nodeValue;
+	}
+	</script>
 </body>
 </html>
