--- a/stream/adventuredata.html
+++ b/stream/adventuredata.html
@@ -25,8 +25,8 @@
 	               font-family:    ScalySansCapsBold;
 	               font-size:      18px;
 	               font-weight:    bold;
-	               text-transform: uppercase;
-	               color: black;
+	               color: white;
+		       text-shadow: 0 0 3px #000000;
 	           }
 	           .CharName
 	           {
@@ -38,7 +38,7 @@
 	           }
 	           .CharTitle
 	           {
-	               font-family:    NodestoCaps
+	               font-family:    NodestoCaps;
 	               font-size:      18px;
 	               font-weight:    bold;
 	               text-transform: uppercase;
