--- a/stream/adventuredata.html
+++ b/stream/adventuredata.html
@@ -18,7 +18,8 @@
 	               font-size:      42px;
 	               font-weight:    bold;
 	               text-transform: uppercase;
-	               color: black;
+	               color: white;
+		       text-shadow: 0 0 4px #000000;
 	           }
 	           .AdvDesc
 	           {
@@ -26,7 +27,8 @@
 	               font-size:      18px;
 	               font-weight:    bold;
 	               color: white;
-		       text-shadow: 0 0 3px #000000;
+		       text-shadow: 0 0 4px #000000;
+	               margin-left: 3px;
 	           }
 	           .CharName
 	           {
