--- a/stream/adventuredata.html
+++ b/stream/adventuredata.html
@@ -36,8 +36,6 @@
                                            font-weight:    bold;
                                            text-transform: uppercase;
                                            color: black;
-					   width: 310px;
-					   height: 38px;
                                        }
                                        .CharTitle
                                        {
@@ -47,8 +45,6 @@
                                            text-transform: uppercase;
                                            margin-top: -7px;
                                            color: black;
-					   width: 310px;
-					   height: 20px;
                                        }
 </style>
 <title></title>
@@ -64,6 +60,9 @@
 <div class="CharTitle" id="CharacterTitle04"></div>
 <div class="AdvName" id="AdventureTitle"></div>
 <div class="AdvDesc" id="AdventureDescription"></div>
+
+<div id="hidden-resizer" style="visibility: hidden"></div>
+	
 <script src="https://apis.google.com/js/api.js" type="text/javascript">
 </script> 
 <script type="text/javascript">
@@ -106,33 +105,18 @@
                             }
 </script> 
 <script>
-	var autoSizeText;
-	autoSizeText = function() {
-		var el, elements, _i, _len, _results;
-		elements = $('.CharName');
-		console.log(elements);
-		if (elements.length < 0) {
-			return;
-		}
-		_results = [];
-		for (_i = 0, _len = elements.length; _i < _len; _i++) {
-			el = elements[_i];
-			_results.push((function(el) {
-				var resizeText, _results1;
-				resizeText = function() {
-					var elNewFontSize;
-					elNewFontSize = (parseInt($(el).css('font-size').slice(0, -2)) - 1) + 'px';
-					return $(el).css('font-size', elNewFontSize);
-				};
-				_results1 = [];
-				while (el.scrollHeight > el.offsetHeight) {
-					_results1.push(resizeText());
-				}
-				return _results1;
-			})(el));
-		}
-		return _results;
-	};
+var size;
+var desired_width = 310;
+var resizer = $("#hidden-resizer");
+
+resizer.html("This is the text I want to resize.");
+
+while(resizer.width() > desired_width) {
+  size = parseInt(resizer.css("font-size"), 10);
+  resizer.css("font-size", size - 1);
+}
+
+$("#target-location").css("font-size", size).html(resizer.html());
 </script>
 </body>
 </html>
