--- a/stream/adventuredata.html
+++ b/stream/adventuredata.html
@@ -3,49 +3,55 @@
 <head>
 
 <style>
-                                       @font-face {
-                                       font-family: "NodestoCaps";
-                                       src: url("/Fonts/Nodesto%20Caps%20Condensed%20Bold.woff2") format("woff2"), url("/Fonts/Nodesto%20Caps%20Condensed%20Bold.woff") format("woff");
-                                       }
-                                       @font-face {
-                                       font-family: "ScalySansCapsBold";
-                                       src: url("/Fonts/Scaly%20Sans%20Caps%20Bold.woff2") format("woff2"), url("/Fonts/Scaly%20Sans%20Caps%20Bold.woff") format("woff");
-                                       }
-                                       .AdvName
-                                       {
-                                           font-family:    NodestoCaps;
-                                           font-size:      42px;
-                                           font-weight:    bold;
-                                           text-transform: uppercase;
-                                           color: white;
-                                           text-shadow: 0 0 4px #000000;
-                                       }
-                                       .AdvDesc
-                                       {
-                                           font-family:    ScalySansCapsBold;
-                                           font-size:      18px;
-                                           font-weight:    bold;
-                                           color: white;
-                                           text-shadow: 0 0 4px #000000;
-                                           margin-left: 3px;
-                                       }
-                                       .CharName
-                                       {
-                                           font-family:    NodestoCaps;
-                                           font-size:      36px;
-                                           font-weight:    bold;
-                                           text-transform: uppercase;
-                                           color: black;
-                                       }
-                                       .CharTitle
-                                       {
-                                           font-family:    NodestoCaps;
-                                           font-size:      18px;
-                                           font-weight:    bold;
-                                           text-transform: uppercase;
-                                           margin-top: -7px;
-                                           color: black;
-                                       }
+@font-face {
+	font-family: "NodestoCaps";
+	src: url("/Fonts/Nodesto%20Caps%20Condensed%20Bold.woff2") format("woff2"), url("/Fonts/Nodesto%20Caps%20Condensed%20Bold.woff") format("woff");
+}
+@font-face {
+	font-family: "ScalySansCapsBold";
+	src: url("/Fonts/Scaly%20Sans%20Caps%20Bold.woff2") format("woff2"), url("/Fonts/Scaly%20Sans%20Caps%20Bold.woff") format("woff");
+}
+.AdvName {
+	font-family: NodestoCaps;
+	font-size: 42px;
+	font-weight: bold;
+	text-transform: uppercase;
+	color: white;
+	text-shadow: 0 0 4px #000000;
+}
+.AdvDesc {
+	font-family: ScalySansCapsBold;
+	font-size: 18px;
+	font-weight: bold;
+	color: white;
+	text-shadow: 0 0 4px #000000;
+	margin-left: 3px;
+}
+.CharName {
+	font-family: NodestoCaps;
+	font-size: 36px;
+	font-weight: bold;
+	text-transform: uppercase;
+	color: black;
+	width: 310px;
+	height: 38px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis; 
+}
+.CharTitle {
+	font-family: NodestoCaps;
+	font-size: 18px;
+	font-weight: bold;
+	text-transform: uppercase;
+	margin-top: -7px;
+	color: black;
+	width: 310px;
+	height: 20px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
 </style>
 <title></title>
 </head>
