--- a/stream/adventuredata.html
+++ b/stream/adventuredata.html
@@ -37,7 +37,8 @@
 	height: 38px;
 	white-space: nowrap;
 	overflow: hidden;
-	text-overflow: ellipsis; 
+	text-overflow: ellipsis;
+	letter-spacing: -0.25px;
 }
 .CharTitle {
 	font-family: NodestoCaps;
