--- a/stream/adventuredata.html
+++ b/stream/adventuredata.html
@@ -18,6 +18,7 @@
 	text-transform: uppercase;
 	color: white;
 	text-shadow: 0 0 4px #000000;
+	margin-top: 5px;
 }
 .AdvDesc {
 	font-family: ScalySansCapsBold;
@@ -48,7 +49,7 @@
 	margin-top: -2px;
 	color: black;
 	width: 310px;
-	height: 20px;
+	height: 22px;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
