--- a/stream/adventuredata.html
+++ b/stream/adventuredata.html
@@ -30,14 +30,15 @@
 }
 .CharName {
 	font-family: NodestoCaps;
-	font-size: 38px;
+	font-size: 90px;
 	font-weight: bold;
-	text-transform: uppercase;
+	text-transform: lowercase;
 	color: black;
 	width: 308px;
 	height: 38px;
 	white-space: nowrap;
 	overflow: hidden;
+	margin-top -8px;
 	text-overflow: ellipsis;
 	letter-spacing: -0.25px;
 }
