--- a/stream/adventuredata.html
+++ b/stream/adventuredata.html
@@ -30,15 +30,14 @@
 }
 .CharName {
 	font-family: NodestoCaps;
-	font-size: 54px;
+	font-size: 38px;
 	font-weight: bold;
-	text-transform: lowercase;
+	text-transform: uppercase;
 	color: black;
 	width: 308px;
 	height: 38px;
 	white-space: nowrap;
 	overflow: hidden;
-	margin-top -16px;
 	text-overflow: ellipsis;
 	letter-spacing: -0.25px;
 }
