--- a/stream/adventuredata.html
+++ b/stream/adventuredata.html
@@ -87,7 +87,8 @@
                             };
                             xhttp.open("GET", "https://spreadsheets.google.com/feeds/list/1RbvEAtAvqr79s5FQx0X0f4t9LYxzf0cIy8_w6sOi6MQ/2/public/full/cokwr");
                             xhttp.send();
-
+			
+                            setInterval(parseFeed, 5000);
                             function parseFeed(xml) {
                                var xmlDoc = xml.responseXML;
                                document.getElementById("AdventureTitle").innerHTML =
