--- a/stream/adventuredata.html
+++ b/stream/adventuredata.html
@@ -87,9 +87,8 @@
                             };
                             xhttp.open("GET", "https://spreadsheets.google.com/feeds/list/1RbvEAtAvqr79s5FQx0X0f4t9LYxzf0cIy8_w6sOi6MQ/2/public/full/cokwr");
                             xhttp.send();
-			
-                            setInterval(parseFeed, 5000);
-                            function parseFeed(xml) {
+
+                            setInterval(function parseFeed(xml) {
                                var xmlDoc = xml.responseXML;
                                document.getElementById("AdventureTitle").innerHTML =
                                xmlDoc.getElementsByTagName("gsx:c01")[0].childNodes[0].nodeValue;
@@ -111,7 +110,7 @@
                                xmlDoc.getElementsByTagName("gsx:c09")[0].childNodes[0].nodeValue;
                                document.getElementById("CharacterTitle04").innerHTML =
                                xmlDoc.getElementsByTagName("gsx:c10")[0].childNodes[0].nodeValue;
-                            }
+                            }, 10000);
 </script> 
 </body>
 </html>
