--- a/stream/adventuredata.html
+++ b/stream/adventuredata.html
@@ -79,7 +79,7 @@
                              });
 </script> 
 <script>
-                            var xhttp = new setInterval(XMLHttpRequest(), 5000);
+                            var xhttp = new XMLHttpRequest();
                             xhttp.onreadystatechange = function() {
                                if (this.readyState == 4 && this.status == 200) {
                                    parseFeed(this);
