--- a/stream/adventuredata.html
+++ b/stream/adventuredata.html
@@ -58,7 +58,7 @@
 </style>
 <title></title>
 </head>
-<body onload="getData()">
+<body onload="setInterval(getData(),5000)">
 	
 <div class="CharName" id="CharacterName01"></div>
 <div class="CharTitle" id="CharacterTitle01"></div>
