--- a/stream/dndtpj-data.html
+++ b/stream/dndtpj-data.html
@@ -36,6 +36,8 @@
   font-family: ZatannaMisdirection;
   font-size: 28px;
   color: black;
+  font-weight: bold;
+  line-height: 80%;
   text-align: right;
 }
 .CharName {
