--- a/stream/dndtpj-data.html
+++ b/stream/dndtpj-data.html
@@ -36,8 +36,8 @@
   font-family: ZatannaMisdirection;
   font-size: 28px;
   color: black;
-  font-weight: bold;
-  line-height: 95%;
+  font-weight: 600;
+  line-height: 985%;
   text-align: right;
 }
 .CharName {
